Bug 279245 - igc(4) I226 (and I225) TX hangups
Summary: igc(4) I226 (and I225) TX hangups
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 13.2-RELEASE
Hardware: amd64 Any
: --- Affects Some People
Assignee: Kevin Bowling
URL:
Keywords: IntelNetworking
Depends on:
Blocks:
 
Reported: 2024-05-23 09:12 UTC by Dr. Uwe Meyer-Gruhl
Modified: 2026-08-08 00:48 UTC (History)
10 users (show)

See Also:
kbowling: mfc-stable15+
kbowling: mfc-stable14+


Attachments
rc.d script to find I226-V adapters and invoke a script to disable ASPM (742 bytes, text/plain)
2025-12-02 22:27 UTC, Michael Adler
no flags Details
Walk the PCIe config space of a device and disable ASPM (2.96 KB, application/x-shellscript)
2025-12-02 22:31 UTC, Michael Adler
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dr. Uwe Meyer-Gruhl 2024-05-23 09:12:16 UTC
When using an I226 under OpnSense (FreeBSD 13.2-RELEASE kernel - I also tried FreeBSD 14.0-RELEASE), I experience connection hangups about once per day under no specific circumstances (maximum was 3 times within one hour, I also had none in three days).

This problem manifests in a dead connection (no packets are received, note are sent), but the low-level counters (dev.igc.0.mac_stats) still increase.
The conditon can be cleard up by bringing the interface down and up again or by shortly disconnecting the cable.

There are reports on this and other related problems all over the internet for different OSes, see:

Windows: https://forums.evga.com/PSA-Intel-I226V-25GbE-on-Raptor-Lake-Motherboards-Has-a-Connection-Drop-Issue-No-Fix-m3595279.aspx
OpnSense (FreeBSD): https://forum.opnsense.org/index.php?topic=40404.msg199288#msg199288
pfSense (FreeBSD): https://forum.netgate.com/topic/181571/chinese-i226-v-on-23-05-1-problems

My specific variant is an I226-V, rev.4, built into a Minisforum MS-01:

igc0@pci0:87:0:0:       class=0x020000 rev=0x04 hdr=0x00 vendor=0x8086 device=0x125c subvendor=0x8086 subdevice=0x0000
    vendor     = 'Intel Corporation'
    device     = 'Ethernet Controller I226-V'
    class      = network
    subclass   = ethernet


However, there are reports of the I226-LM connected to the same machine showing the same behaviour, see: https://forum.opnsense.org/index.php?topic=40556

igc1@pci0:88:0:0:       class=0x020000 rev=0x04 hdr=0x00 vendor=0x8086 device=0x125b subvendor=0x8086 subdevice=0x0000
    vendor     = 'Intel Corporation'
    device     = 'Ethernet Controller I226-LM'
    class      = network
    subclass   = ethernet

This seems to indicate that at least the I226 family (which is a successor to the problem-ridden I225 using the same driver module) is affected by this problem.
I tried all possible settings I could think of to make this go away, like reducing the speed from 2.5 to 1 Gbps, disabling EEE (which is off by default anyway) to no avail.

Interestingly, the Minisforum-MS01 has gained much interest in the last few months and there was a specific review on Youtube were the creator states in a comment that he is not seeing this problem (https://www.youtube.com/watch?v=_wgX1sDab-M). However, he uses OpnSense under a Proxmox hypervisor, thus using the Linux driver modules (OpnSense itself uses the virtualized virtio NICs).

This and the reports of gamers stating they had "micro-hangs" manifesting as short lags in online games got me thinking.
So I compared the Linux and FreeBSD drivers and found, that the Linux driver has a specific routine to catch, protocol and clear "TX hang" conditions, see from line 3150 here: https://github.com/torvalds/linux/blob/master/drivers/net/ethernet/intel/igc/igc_main.c, which reads:

	if (test_bit(IGC_RING_FLAG_TX_DETECT_HANG, &tx_ring->flags)) {
		struct igc_hw *hw = &adapter->hw;

		/* Detect a transmit hang in hardware, this serializes the
		* check with the clearing of time_stamp and movement of i
		*/
		clear_bit(IGC_RING_FLAG_TX_DETECT_HANG, &tx_ring->flags);
		if (tx_buffer->next_to_watch &&
		    time_after(jiffies, tx_buffer->time_stamp +
		    (adapter->tx_timeout_factor * HZ)) &&
		    !(rd32(IGC_STATUS) & IGC_STATUS_TXOFF) &&
		    (rd32(IGC_TDH(tx_ring->reg_idx)) != readl(tx_ring->tail)) &&
		    !tx_ring->oper_gate_closed) {
			/* detected Tx unit hang */
			netdev_err(tx_ring->netdev,
				   "Detected Tx Unit Hang\n"
				   "  Tx Queue             <%d>\n"
				   "  TDH                  <%x>\n"
				   "  TDT                  <%x>\n"
				   "  next_to_use          <%x>\n"
				   "  next_to_clean        <%x>\n"
				   "buffer_info[next_to_clean]\n"
				   "  time_stamp           <%lx>\n"
				   "  next_to_watch        <%p>\n"
				   "  jiffies              <%lx>\n"
				   "  desc.status          <%x>\n",
				   tx_ring->queue_index,
				   rd32(IGC_TDH(tx_ring->reg_idx)),
				   readl(tx_ring->tail),
				   tx_ring->next_to_use,
				   tx_ring->next_to_clean,
				   tx_buffer->time_stamp,
				   tx_buffer->next_to_watch,
				   jiffies,
				   tx_buffer->next_to_watch->wb.status);
			netif_stop_subqueue(tx_ring->netdev,
					    tx_ring->queue_index);

			/* we are about to reset, no point in enabling stuff */
			return true;
		}
	}
    
There is also a routine to reset the adapter:

/**
 * igc_tx_timeout - Respond to a Tx Hang
 * @netdev: network interface device structure
 * @txqueue: queue number that timed out
 **/
static void igc_tx_timeout(struct net_device *netdev,
			   unsigned int __always_unused txqueue)
{
	struct igc_adapter *adapter = netdev_priv(netdev);
	struct igc_hw *hw = &adapter->hw;

	/* Do the reset outside of interrupt context */
	adapter->tx_timeout_count++;
	schedule_work(&adapter->reset_task);
	wr32(IGC_EICS,
	     (adapter->eims_enable_mask & ~adapter->eims_other));
}

I did not see anything to this extent in the FreeBSD driver igc module.

Intel themselves do not offer an OEM driver for FreeBSD in their Intel Network Connections 29.1 package.

So, my theory is that there is a hardware ideosyncrasy in this Intel adapter family which causes packet flow to stop sometimes.
This is handled in the Linux driver module by testing if no packets are processed for a short period.
That detection and handling would not be there if there was no problem, so we can take this for a fact.

I suspect that the same handling is contained in the Windows drivers, too - which I cannot ascertain because I cannot look at the source code.
However, this would be in line with the observed "micro-hangs" under Windows from other users.

Alas, under FreeBSD, there is no handling of this condition which might explain the total packet loss after it occurs.
If it were fixed in FreeBSD, it would be a great benefit for applications like pfSense and OpnSense since now, these adapters are essentially unusable.
A potential fix would still produce "micro-hangs" once in a while, however this is far better than losing the connection completely.
Comment 1 John Wehle 2024-05-25 08:22:01 UTC
A factor in some of the i225 / i226 issues seem to be the NVM version installed in the card (see FreeBSD PR 265714 for a patch to display the version).  My understanding is the i225 NVM is up to 1.94 and the i226 NVM is up to 2.25.

As noted on PR 265714 I've experienced problems similar to yours using a i225 with NVM version 1.79, I have a i226 on order with NVM version 2.17.

It might be interesting to know the NVM version of your i226 NIC.
Comment 2 Dr. Uwe Meyer-Gruhl 2024-05-25 08:45:10 UTC
(In reply to john from comment #1)
Interesting. I thought that there was no firmware for these adapters at all and that the revision was all that separated generations. Do you happen to know if the NIC firmware is contained in the motherboard BIOS or not changeable at all?

Alas, I cannot try the patch and check the version, since I lack means to build my own kernel.

The reason I am asking is that the first link I referenced says something about Asus having released both a BIOS and a driver update for their Z790 Kingpin boards which seems to fix the issue (which in this case, was the micro-hangs, indicating that not only the full hang, but also the underlying hardware problem may have been fixed). If this is true, there may have been a NIC firmware update contained in the new BIOS.

I have found that for my hardware, Minisforum has just released a BIOS update from version 1.17 (late 2023) to 1.22 (03/12/2024). I have installed it and using it for two days now - so far without a hangup.
Comment 3 John Wehle 2024-05-25 16:54:20 UTC
Intel in:

  https://community.intel.com/t5/Ethernet-Products/Intel-Ethernet-Controller-3-I225-V-Connection-Drop/td-p/1482427

directs people to flash their motherboard firmware in order to receive the new NIC NVM version.

Standalone NICs can also be flashed depending on the design.

The general problem is some OEMs either don't supply updates or are slow to provide updates.  I.e. IOCrest never responded to my request for an updated i225 NVM.
Comment 4 Dr. Uwe Meyer-Gruhl 2024-05-26 06:05:53 UTC
1. I now know that the OEMs should provide the NVM update and I have requested, but not received it yet. Considering the neglect by OEMs, it is a shame that Intel provides updates for the I225, but not for the I226.

2. I had a hangup once again, so the Minisforum MS-01 BIOS update does nothing w/r to this problem.

3. As for the driver shortcoming addressed with this bug report: Fixing it would still be a band-aid for people like me who have no remedy for the underlying hardware bug.
Comment 5 Dr. Uwe Meyer-Gruhl 2024-08-22 10:57:27 UTC
As it turns out, I could fix my specific problem by disabling ASPM support in the BIOS. No more hangups since then.

So there is an alternative fix, at least for me.
Comment 6 bugtrackers 2024-08-29 15:26:13 UTC
I just experienced the same issue, and it was a PAIN to find the real issue.
https://forum.opnsense.org/index.php?topic=42368

TL:DR:
Mini-PC by shuttle with Intel i228-LM 2.5GB Ports
Under heady load, sometimes every 6h I needed to reboot my opnsense box.

Network behaved really weird, devices became inaccessible, opnsense too. A reboot usually fixed the issue but only for several hours.
Funnily enough a reboot of my switch also seemed to have fix it for the moment.


Luckily my OEM uploaded a new BIOS this month and it actually fixed my issues, no more reboots needed after the BIOS update.
https://global.shuttle.com/products/productsDownload?pn=DL30N%20SERIES
Comment 7 Dr. Uwe Meyer-Gruhl 2025-08-17 21:33:02 UTC
Side note: In the absence of a BIOS setting, you can also try setting hw.pci.enable_aspm=0, at the expense of less power savings for all PCIe devices.
Comment 8 Michael Adler 2025-12-02 21:17:23 UTC
(In reply to Dr. Uwe Meyer-Gruhl from comment #7)

I finally figured out the problem on my ASUS PN65 with I226-V and it isn't solved by any of the suggestions so far, but is related. All this on 14.3 and the igc driver.

Setting hw.pci.enable_aspm=0 in loader.conf did not work. Updating the I226-V firmware to from V2.17 to V2.32 using nvmupdate64e as described at https://forum.opnsense.org/index.php?topic=48695.0 did not work, though it may have been necessary. I'm not going to revert to 2.17 to test that.

I discovered that the igc device's ASPM capability in the PCIe link control capability register remained enabled even with hw.pci.enable_aspm cleared. I see no setting in this ASUS BIOS to disable ASPM for the device. There are configurations for the CPUs, but I don't see other PCIe settings. The BIOS for this machine is dumbed down.

Shouldn't the kernel or igc driver clear the ASPM enable bits in the PCIe link control register when enable_aspm is 0?

Given that the universal solution to igc problems is disabling ASPM, should the igc driver have a default config that forces the link control to disable ASPM?

I wrote a script that walks the PCIe config space, finds the control register and clears the bits that is now running during boot. So far the machine is both stable and finally seeing expected throughput.
Comment 9 Dr. Uwe Meyer-Gruhl 2025-12-02 21:58:37 UTC
For me, the update of the card firmware did not fix the problem, either. It looks like a hardware idiosyncrasy.

The real fix would be to implement code to detect and clear the hang condition like it is obviously used in other OSes.

Disabling ASPM seems to be a mitigation, but no real fix.
Comment 10 Michael Adler 2025-12-02 22:08:06 UTC
I've seen cases where the bug was in power management in the HW, where the real solution short of modifying the HW was working around the power management bug. In that case it was a PCIe core purchased from a major IP vendor that would go into micro sleep states based on the traffic pattern sent to it from the device. The time required to wake up caused major loss of bandwidth. There's nothing the kernel or driver could have done to fix it short of preventing the mode that allowed sleep.

Given that everyone reporting problems fixes it with the same solution and Intel hasn't worked around it even in the latest firmware, doesn't it seem reasonable to conclude that the driver should deal with this quirk/bug and that Intel won't?
Comment 11 Dr. Uwe Meyer-Gruhl 2025-12-02 22:10:15 UTC
Yes, that is why I re-opened the bug. The proposal for a FreeBSD driver fix already is in the bug report itself.
Comment 12 Michael Adler 2025-12-02 22:22:44 UTC
Great. Thank you -- I didn't notice. I'm going to attach the scripts that fixed the problem for me in case they help anyone else for now.
Comment 13 Michael Adler 2025-12-02 22:27:52 UTC
Created attachment 265786 [details]
rc.d script to find I226-V adapters and invoke a script to disable ASPM

Put in /usr/local/etc/rc.d. Runs at boot, finds I226-V adapters and invokes a script to turn off ASPM in the PCIe link control register.

Also requires the attached aspm_disable script.

For machines that have an option in the BIOS, you might prefer a BIOS switch to this script.
Comment 14 Michael Adler 2025-12-02 22:31:36 UTC
Created attachment 265787 [details]
Walk the PCIe config space of a device and disable ASPM

Companion to eth_aspm_disable attachment. Put this script in /usr/local/sbin.

Requires the pciutils package for lspci and setpci.

The script finds the link control register for a PCIe device and clears the two ASPM bits.
Comment 15 Adrian Chadd freebsd_committer freebsd_triage 2026-06-03 05:23:04 UTC
ok, err, this should get eyeballs for the "maybe the driver should disable aspm itself" and "whats up with that tx timeout workaround" from the intel maintainers.
Comment 16 Michael Adler 2026-07-09 15:22:28 UTC
Submitted PR https://github.com/freebsd/freebsd-src/pull/2318
Comment 17 commit-hook freebsd_committer freebsd_triage 2026-07-31 09:43:59 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=9d30fd353dd3eacb095ce98cb9c91ec015b9af64

commit 9d30fd353dd3eacb095ce98cb9c91ec015b9af64
Author:     Michael Adler <madler@tapil.com>
AuthorDate: 2026-07-09 17:02:37 +0000
Commit:     Kevin Bowling <kbowling@FreeBSD.org>
CommitDate: 2026-07-31 09:33:54 +0000

    igc: Disable ASPM L1.2 on I226 to prevent RX stalls

    I226 parts advertise support for the PCIe L1.2 link substate, but a
    hardware erratum makes the exit latency from that low-power state
    longer than the packet buffer can absorb under load. This stalls the
    inbound packet stream. Disabling ASPM system-wide (BIOS or OS ASPM
    policy) does not fix it. The L1.2 enable bit must be cleared directly
    in the device's own PCIe L1 PM extended capability.

    Add igc_is_device_id_i226() to identify affected parts and
    igc_disable_broken_aspm_l1_2() to clear the ASPM L1.2 enable bit
    on attach and after resume, since PCIe config space can be
    reset across a suspend/resume cycle.

    Adapted from the Linux igc driver:

      0325143b59c6 igc: disable L1.2 PCI-E link substate to avoid
                   performance issue
      1468c1f97cf3 igc: fix disabling L1.2 PCI-E link substate on I226
                   on init

    Signed-off-by: Michael Adler <madler@tapil.com>

    PR:             279245
    Reviewed by:    Jim Thompson
    MFC after:      1 week
    Pull-Request:   https://github.com/freebsd/freebsd-src/pull/2318

 sys/dev/igc/if_igc.c   | 44 ++++++++++++++++++++++++++++++++++++++++++++
 sys/dev/igc/igc_base.c | 21 +++++++++++++++++++++
 sys/dev/igc/igc_base.h |  1 +
 3 files changed, 66 insertions(+)
Comment 18 commit-hook freebsd_committer freebsd_triage 2026-08-01 00:00:54 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=cecb0f45cb83349c60514da38fddce83ad042468

commit cecb0f45cb83349c60514da38fddce83ad042468
Author:     Michael Adler <madler@tapil.com>
AuthorDate: 2026-07-31 23:54:00 +0000
Commit:     Kevin Bowling <kbowling@FreeBSD.org>
CommitDate: 2026-07-31 23:59:37 +0000

    igc: Apply ASPM L1.2 workaround to all I226 devices

    Classify I226_LMVP and I226_BLANK_NVM as I226 silicon so they
    receive the I226-specific ASPM L1.2 workaround.

    PR:             279245
    MFC after:      1 week
    Pull-Request:   https://github.com/freebsd/freebsd-src/pull/2318

 sys/dev/igc/igc_base.c | 5 +++++
 1 file changed, 5 insertions(+)
Comment 19 commit-hook freebsd_committer freebsd_triage 2026-08-08 00:39:23 UTC
A commit in branch stable/15 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=cf788fbe85ff7e995ee3ff535327eac62c14b3df

commit cf788fbe85ff7e995ee3ff535327eac62c14b3df
Author:     Michael Adler <madler@tapil.com>
AuthorDate: 2026-07-31 23:54:00 +0000
Commit:     Kevin Bowling <kbowling@FreeBSD.org>
CommitDate: 2026-08-08 00:37:34 +0000

    igc: Apply ASPM L1.2 workaround to all I226 devices

    Classify I226_LMVP and I226_BLANK_NVM as I226 silicon so they
    receive the I226-specific ASPM L1.2 workaround.

    PR:             279245
    Pull-Request:   https://github.com/freebsd/freebsd-src/pull/2318

    (cherry picked from commit cecb0f45cb83349c60514da38fddce83ad042468)

 sys/dev/igc/igc_base.c | 5 +++++
 1 file changed, 5 insertions(+)
Comment 20 commit-hook freebsd_committer freebsd_triage 2026-08-08 00:39:27 UTC
A commit in branch stable/15 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=a9d71b76c647575c57d1e008b48f6b203ce184ac

commit a9d71b76c647575c57d1e008b48f6b203ce184ac
Author:     Michael Adler <madler@tapil.com>
AuthorDate: 2026-07-09 17:02:37 +0000
Commit:     Kevin Bowling <kbowling@FreeBSD.org>
CommitDate: 2026-08-08 00:33:39 +0000

    igc: Disable ASPM L1.2 on I226 to prevent RX stalls

    I226 parts advertise support for the PCIe L1.2 link substate, but a
    hardware erratum makes the exit latency from that low-power state
    longer than the packet buffer can absorb under load. This stalls the
    inbound packet stream. Disabling ASPM system-wide (BIOS or OS ASPM
    policy) does not fix it. The L1.2 enable bit must be cleared directly
    in the device's own PCIe L1 PM extended capability.

    Add igc_is_device_id_i226() to identify affected parts and
    igc_disable_broken_aspm_l1_2() to clear the ASPM L1.2 enable bit
    on attach and after resume, since PCIe config space can be
    reset across a suspend/resume cycle.

    Adapted from the Linux igc driver:

      0325143b59c6 igc: disable L1.2 PCI-E link substate to avoid
                   performance issue
      1468c1f97cf3 igc: fix disabling L1.2 PCI-E link substate on I226
                   on init

    Signed-off-by: Michael Adler <madler@tapil.com>

    PR:             279245
    Reviewed by:    Jim Thompson
    Pull-Request:   https://github.com/freebsd/freebsd-src/pull/2318

    (cherry picked from commit 9d30fd353dd3eacb095ce98cb9c91ec015b9af64)

 sys/dev/igc/if_igc.c   | 44 ++++++++++++++++++++++++++++++++++++++++++++
 sys/dev/igc/igc_base.c | 21 +++++++++++++++++++++
 sys/dev/igc/igc_base.h |  1 +
 3 files changed, 66 insertions(+)
Comment 21 commit-hook freebsd_committer freebsd_triage 2026-08-08 00:44:37 UTC
A commit in branch stable/14 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=30f409552cbadeab12279f86eb6b67f54409b3ec

commit 30f409552cbadeab12279f86eb6b67f54409b3ec
Author:     Michael Adler <madler@tapil.com>
AuthorDate: 2026-07-31 23:54:00 +0000
Commit:     Kevin Bowling <kbowling@FreeBSD.org>
CommitDate: 2026-08-08 00:43:34 +0000

    igc: Apply ASPM L1.2 workaround to all I226 devices

    Classify I226_LMVP and I226_BLANK_NVM as I226 silicon so they
    receive the I226-specific ASPM L1.2 workaround.

    PR:             279245
    Pull-Request:   https://github.com/freebsd/freebsd-src/pull/2318

    (cherry picked from commit cecb0f45cb83349c60514da38fddce83ad042468)

 sys/dev/igc/igc_base.c | 5 +++++
 1 file changed, 5 insertions(+)
Comment 22 commit-hook freebsd_committer freebsd_triage 2026-08-08 00:44:39 UTC
A commit in branch stable/14 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=c1a574ef9a35cf277ae3ecc5238586ca7763d4f5

commit c1a574ef9a35cf277ae3ecc5238586ca7763d4f5
Author:     Michael Adler <madler@tapil.com>
AuthorDate: 2026-07-09 17:02:37 +0000
Commit:     Kevin Bowling <kbowling@FreeBSD.org>
CommitDate: 2026-08-08 00:40:07 +0000

    igc: Disable ASPM L1.2 on I226 to prevent RX stalls

    I226 parts advertise support for the PCIe L1.2 link substate, but a
    hardware erratum makes the exit latency from that low-power state
    longer than the packet buffer can absorb under load. This stalls the
    inbound packet stream. Disabling ASPM system-wide (BIOS or OS ASPM
    policy) does not fix it. The L1.2 enable bit must be cleared directly
    in the device's own PCIe L1 PM extended capability.

    Add igc_is_device_id_i226() to identify affected parts and
    igc_disable_broken_aspm_l1_2() to clear the ASPM L1.2 enable bit
    on attach and after resume, since PCIe config space can be
    reset across a suspend/resume cycle.

    Adapted from the Linux igc driver:

      0325143b59c6 igc: disable L1.2 PCI-E link substate to avoid
                   performance issue
      1468c1f97cf3 igc: fix disabling L1.2 PCI-E link substate on I226
                   on init

    Signed-off-by: Michael Adler <madler@tapil.com>

    PR:             279245
    Reviewed by:    Jim Thompson
    Pull-Request:   https://github.com/freebsd/freebsd-src/pull/2318

    (cherry picked from commit 9d30fd353dd3eacb095ce98cb9c91ec015b9af64)

 sys/dev/igc/if_igc.c   | 44 ++++++++++++++++++++++++++++++++++++++++++++
 sys/dev/igc/igc_base.c | 21 +++++++++++++++++++++
 sys/dev/igc/igc_base.h |  1 +
 3 files changed, 66 insertions(+)